# Scratch2Cpp

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
shaders/: triangle.frag  triangle.vert
src/: runcpp.cpp  runscratch.cpp  runtime.cpp  runtime.h  scratch.cpp  scratch.h  scratch2cpp.cpp
