cmake_minimum_required(VERSION 3.10)
project(scratch2cpp)
set(CMAKE_CXX_STANDARD 17)

add_executable(scratch2cpp src/scratch.h src/scratch.cpp src/scratch2cpp.cpp)
add_executable(runscratch src/runtime.h src/runtime.cpp src/runscratch.cpp)
add_executable(runcpp src/runtime.h src/runtime.cpp src/runcpp.cpp)
find_package(libzippp)
find_package(nlohmann_json)
find_package(glfw3)
find_package(glad)
target_link_libraries(scratch2cpp PRIVATE glfw glad::glad libzippp::libzippp nlohmann_json::nlohmann_json)
target_link_libraries(runscratch PRIVATE glfw glad::glad libzippp::libzippp nlohmann_json::nlohmann_json)
target_link_libraries(runcpp PRIVATE glfw glad::glad libzippp::libzippp nlohmann_json::nlohmann_json)